--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:card" content="summary"> 
+    <meta name="twitter:site" content="@ob5_c1">
+    <meta property="og:url" content="https://watamari1019.github.io/socialtech/">
+    <meta property="og:title" content="SocialTech">
+    <meta property="og:description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
+    <meta property="og:image" content="https://watamari1019.github.io/socialtech/images/Logo.png">
     <link rel="stylesheet" href="style.css">
   </head>
 
